--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -33,13 +33,23 @@
             "label": "watch",
             "command": "dotnet",
             "type": "process",
+            "isBackground": true,
             "args": [
                 "watch",
                 "run",
                 "--project",
-                "${workspaceFolder}/MudBlazorTest.csproj"
+                "${workspaceFolder}/MudBlazorTest.csproj",
+                "/property:GenerateFullPaths=true",
+                "/consoleloggerparameters:NoSummary"
             ],
-            "problemMatcher": "$msCompile"
+            "problemMatcher": {
+                "base": "$msCompile",
+                "background": {
+                    "activeOnStart": true,
+                    "beginsPattern": "^dotnet watch.*Started$",
+                    "endsPattern": "Content root path:"
+                }
+            }
         }
     ]
 }
