--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,41 +3,39 @@
     "tasks": [
         {
             "label": "build",
-            "type": "process",
             "command": "dotnet",
+            "type": "process",
             "args": [
                 "build",
-                "--project", "src",
+                "${workspaceFolder}/src/RemindMeal.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
-            "problemMatcher": "$msCompile",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            }
+            "problemMatcher": "$msCompile"
         },
         {
             "label": "watch",
             "command": "dotnet",
             "type": "process",
-            "isBackground": true,
             "args": [
                 "watch",
                 "run",
                 "--project",
-                "${workspaceFolder}/src/MudBlazorTest.csproj",
+                "${workspaceFolder}/src/RemindMeal.csproj"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "publish",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "publish",
+                "${workspaceFolder}/src/RemindMeal.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
-            "problemMatcher": {
-                "base": "$msCompile",
-                "background": {
-                    "activeOnStart": true,
-                    "beginsPattern": "^dotnet watch.*Started$",
-                    "endsPattern": "Content root path:"
-                }
-            }
+            "problemMatcher": "$msCompile"
         }
     ]
 }
