--- a/src/Properties/launchSettings.json
+++ b/src/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "MudBlazorTest": {
+    "RemindMeal": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
