--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
         "philfontaine.autolaunch",
         "ms-dotnettools.csharp",
         "streetsidesoftware.code-spell-checker",
-        "streetsidesoftware.code-spell-checker-french"
+        "streetsidesoftware.code-spell-checker-french",
+        "jmrog.vscode-nuget-package-manager"
     ]
 }
