--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,19 +23,11 @@
                 "--project",
                 "${workspaceFolder}/src/RemindMeal.csproj"
             ],
-            "problemMatcher": "$msCompile"
-        },
-        {
-            "label": "publish",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "publish",
-                "${workspaceFolder}/src/RemindMeal.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
-            ],
-            "problemMatcher": "$msCompile"
+            "problemMatcher": "$msCompile",
+            "presentation": {
+                "reveal": "silent"
+            }
+
         }
     ]
 }
